tests/base/parser/bad/stmts_t-event-with.scilla
scilla_version 0

contract Test
()

(* invalid event identifier *)
transition Something ()
 event [myvar]
end
